tests/invalid_tests/missing_main.minijava
class MissingMain {
    public int foo() {
        return 42;
    }
}
